// Use DBML to define your database structure
// Docs: https://dbml.dbdiagram.io/docs

Table Users{
  user_id serial [primary key]
  full_name varchar(80)
  username varchar(50) [not null] 
  password varchar(30) [not null]
  created_at timestamp 
}



Table Articles {
  id serial [primary key]
  title varchar(255)
  author_id integer [not null, ref: > Users.  user_id]
  genre varchar(50) [not null]
  body text [unique, not null]
  created_at timestamp
  updated_at timestamp
}

// many-to-many
Table User_saves {
  id serial [primary key]
  user_id integer [not null, ref: > Users.user_id]
  article_id integer [not null, ref: > Articles.id]
}


Table Comments {
  id serial [primary key]
  article_id integer [not null, ref: > Articles.id]
  user_id  integer [not null, ref: > Users.user_id]
  body text [not null]
  created_at timestamp 
}
